[project]
name = "chameflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
    "python-multipart>=0.0.9",
]
